--- a/Nori'sWeD20180926/css/photograph.css
+++ b/Nori'sWeD20180926/css/photograph.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 #photograph {
-	background-image: url(../images/bg-photograph.png);
+	background-image: url(../images/bg-photograph.jpg);
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-attachment: fixed;
