--- a/Nori'sWeD/css/contact.css
+++ b/Nori'sWeD/css/contact.css
@@ -23,6 +23,7 @@
 .form {
 	background-color: #eaeaea;
 	padding: 20px;
+	border-radius: 50px;
 }
 
 
@@ -91,6 +92,15 @@ footer {
 
 input, select {
 	text-align: center;
+	border-radius: 10px;
+	border: 1px solid #e2e2e2;
+}
+
+textarea {
+	border-radius: 10px;
+	resize: none;
+	text-align: center;
+	font-size: 20px;
 }
 
 @media screen and (min-width: 768px) {
