--- a/Nori'sWeD/css/works.css
+++ b/Nori'sWeD/css/works.css
@@ -28,7 +28,8 @@
 	margin: 0 auto;
 	width: 100%;
 	margin: 10px auto;
-	border: 2px solid #000000;
+	border: 3px solid #d8d8d847;
+	border-radius: 20px;
 }
 
 .sidebar {
